// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Error handling Snyk fix returns error when called with unsupported type 1`] = `
Object {
  "exceptions": Object {
    "npm": Object {
      "originals": Array [
        Object {
          "options": Object {
            "command": "python3",
          },
          "scanResult": Object {
            "facts": Array [
              Object {
                "data": "not-implemented",
                "type": "not-implemented",
              },
            ],
            "identity": Object {
              "targetFile": "package.json",
              "type": "npm",
            },
          },
          "testResult": Object {
            "depGraphData": "",
            "issues": Array [
              Object {
                "fixInfo": Object {},
                "issueId": "VULN_ID_1",
                "pkgName": "package@version",
              },
            ],
            "issuesData": Object {
              "vuln-id": Object {
                "id": "VULN_ID_1",
                "severity": "high",
                "title": "Fake vuln",
              },
            },
            "remediation": Object {
              "ignore": Object {},
              "patch": Object {},
              "pin": Object {
                "django@1.6.1": Object {
                  "isTransitive": false,
                  "upgradeTo": "django@2.0.1",
                  "vulns": Array [
                    "vuln-id",
                  ],
                },
              },
              "unresolved": Array [],
              "upgrade": Object {},
            },
          },
          "workspace": Object {
            "path": ".",
            "readFile": [Function],
            "writeFile": [Function],
          },
        },
      ],
      "userMessage": "npm is not supported.",
    },
  },
  "fixSummary": "
 ✖ No successful fixes

Unresolved items:

  package.json
  ✖ npm is not supported.

Summary:

  1 items were not fixed
  0 items were successfully fixed
  1 total issues: 1 High
  1 fixable issues
  0 fixed issues


Re-run in debug mode to see more information: DEBUG=*snyk* <COMMAND>. If the issue persists contact support@snyk.io",
  "meta": Object {
    "failed": 1,
    "fixed": 0,
  },
  "results": Object {},
}
`;

exports[`Error handling Snyk fix returns error when manifest can not be parsed 1`] = `
Object {
  "exceptions": Object {},
  "fixSummary": "
Successful fixes:

  requirements.txt
  ✔ Pinned django from 1.6.1 to 2.0.1

Summary:

  0 items were not fixed
  1 items were successfully fixed
  1 total issues: 1 High
  1 fixable issues
  1 fixed issues",
  "meta": Object {
    "failed": 0,
    "fixed": 1,
  },
  "results": Object {
    "python": Object {
      "failed": Array [],
      "skipped": Array [],
      "succeeded": Array [
        Object {
          "changes": Array [
            Object {
              "from": "django@1.6.1",
              "issueIds": Array [
                "vuln-id",
              ],
              "success": true,
              "to": "django@2.0.1",
              "userMessage": "Pinned django from 1.6.1 to 2.0.1",
            },
          ],
          "original": Object {
            "options": Object {
              "command": "python3",
            },
            "scanResult": Object {
              "facts": Array [
                Object {
                  "data": "not-implemented",
                  "type": "not-implemented",
                },
              ],
              "identity": Object {
                "targetFile": "requirements.txt",
                "type": "pip",
              },
            },
            "testResult": Object {
              "depGraphData": "",
              "issues": Array [
                Object {
                  "fixInfo": Object {},
                  "issueId": "VULN_ID_1",
                  "pkgName": "package@version",
                },
              ],
              "issuesData": Object {
                "vuln-id": Object {
                  "id": "VULN_ID_1",
                  "severity": "high",
                  "title": "Fake vuln",
                },
              },
              "remediation": Object {
                "ignore": Object {},
                "patch": Object {},
                "pin": Object {
                  "django@1.6.1": Object {
                    "isTransitive": false,
                    "upgradeTo": "django@2.0.1",
                    "vulns": Array [
                      "vuln-id",
                    ],
                  },
                },
                "unresolved": Array [],
                "upgrade": Object {},
              },
            },
            "workspace": Object {
              "path": ".",
              "readFile": [Function],
              "writeFile": [Function],
            },
          },
        },
      ],
    },
  },
}
`;

exports[`Snyk fix Snyk fix returns results for supported & unsupported type 1`] = `
Object {
  "exceptions": Object {},
  "fixSummary": "
Successful fixes:

  Pipfile
  ✔ Upgraded django from 1.6.1 to 2.0.1

  requirements.txt
  ✔ Upgraded django from 1.6.1 to 2.0.1

Summary:

  0 items were not fixed
  2 items were successfully fixed
  2 total issues: 2 High
  2 fixable issues
  2 fixed issues",
  "meta": Object {
    "failed": 0,
    "fixed": 2,
  },
  "results": Object {
    "python": Object {
      "failed": Array [],
      "skipped": Array [],
      "succeeded": Array [
        Object {
          "changes": Array [
            Object {
              "from": "django@1.6.1",
              "issueIds": Array [
                "vuln-id",
              ],
              "success": true,
              "to": "django@2.0.1",
              "userMessage": "Upgraded django from 1.6.1 to 2.0.1",
            },
          ],
          "original": Object {
            "options": Object {
              "command": "python3",
            },
            "scanResult": Object {
              "facts": Array [
                Object {
                  "data": "not-implemented",
                  "type": "not-implemented",
                },
              ],
              "identity": Object {
                "targetFile": "Pipfile",
                "type": "pip",
              },
            },
            "testResult": Object {
              "depGraphData": "",
              "issues": Array [
                Object {
                  "fixInfo": Object {},
                  "issueId": "VULN_ID_1",
                  "pkgName": "package@version",
                },
              ],
              "issuesData": Object {
                "vuln-id": Object {
                  "id": "VULN_ID_1",
                  "severity": "high",
                  "title": "Fake vuln",
                },
              },
              "remediation": Object {
                "ignore": Object {},
                "patch": Object {},
                "pin": Object {
                  "django@1.6.1": Object {
                    "isTransitive": false,
                    "upgradeTo": "django@2.0.1",
                    "vulns": Array [
                      "vuln-id",
                    ],
                  },
                },
                "unresolved": Array [],
                "upgrade": Object {},
              },
            },
            "workspace": Object {
              "path": ".",
              "readFile": [Function],
              "writeFile": [Function],
            },
          },
        },
        Object {
          "changes": Array [
            Object {
              "from": "django@1.6.1",
              "issueIds": Array [
                "vuln-id",
              ],
              "success": true,
              "to": "django@2.0.1",
              "userMessage": "Upgraded django from 1.6.1 to 2.0.1",
            },
          ],
          "original": Object {
            "options": Object {
              "command": "python3",
            },
            "scanResult": Object {
              "facts": Array [
                Object {
                  "data": "not-implemented",
                  "type": "not-implemented",
                },
              ],
              "identity": Object {
                "targetFile": "requirements.txt",
                "type": "pip",
              },
            },
            "testResult": Object {
              "depGraphData": "",
              "issues": Array [
                Object {
                  "fixInfo": Object {},
                  "issueId": "VULN_ID_1",
                  "pkgName": "package@version",
                },
              ],
              "issuesData": Object {
                "vuln-id": Object {
                  "id": "VULN_ID_1",
                  "severity": "high",
                  "title": "Fake vuln",
                },
              },
              "remediation": Object {
                "ignore": Object {},
                "patch": Object {},
                "pin": Object {
                  "django@1.6.1": Object {
                    "isTransitive": false,
                    "upgradeTo": "django@2.0.1",
                    "vulns": Array [
                      "vuln-id",
                    ],
                  },
                },
                "unresolved": Array [],
                "upgrade": Object {},
              },
            },
            "workspace": Object {
              "path": ".",
              "readFile": [Function],
              "writeFile": [Function],
            },
          },
        },
      ],
    },
  },
}
`;

exports[`Snyk fix Snyk fix returns results for supported type 1`] = `Object {}`;

exports[`Snyk fix Snyk fix returns results for supported type 2`] = `
Object {
  "python": Object {
    "failed": Array [],
    "skipped": Array [],
    "succeeded": Array [
      Object {
        "changes": Array [
          Object {
            "from": "django@1.6.1",
            "issueIds": Array [
              "vuln-id",
            ],
            "success": true,
            "to": "django@2.0.1",
            "userMessage": "Upgraded django from 1.6.1 to 2.0.1",
          },
        ],
        "original": Object {
          "options": Object {
            "command": "python3",
          },
          "scanResult": Object {
            "facts": Array [
              Object {
                "data": "not-implemented",
                "type": "not-implemented",
              },
            ],
            "identity": Object {
              "targetFile": "requirements.txt",
              "type": "pip",
            },
          },
          "testResult": Object {
            "depGraphData": "",
            "issues": Array [
              Object {
                "fixInfo": Object {},
                "issueId": "VULN_ID_1",
                "pkgName": "package@version",
              },
            ],
            "issuesData": Object {
              "vuln-id": Object {
                "id": "VULN_ID_1",
                "severity": "high",
                "title": "Fake vuln",
              },
            },
            "remediation": Object {
              "ignore": Object {},
              "patch": Object {},
              "pin": Object {
                "django@1.6.1": Object {
                  "isTransitive": false,
                  "upgradeTo": "django@2.0.1",
                  "vulns": Array [
                    "vuln-id",
                  ],
                },
              },
              "unresolved": Array [],
              "upgrade": Object {},
            },
          },
          "workspace": Object {
            "path": ".",
            "readFile": [Function],
            "writeFile": [MockFunction] {
              "calls": Array [
                Array [
                  "requirements.txt",
                  "django===2.0.1",
                ],
              ],
              "results": Array [
                Object {
                  "type": "return",
                  "value": Promise {},
                },
              ],
            },
          },
        },
      },
    ],
  },
}
`;
